--- a/configs/apiserver.toml
+++ b/configs/apiserver.toml
@@ -2,4 +2,4 @@ bind_addr = ":8080"
 log_level = "debug"
 
 [store]
-database_url = "  host=localhost  dbname=pg_test_db sslmode=disable"
+database_url = "host=localhost user=test_user password=qweqwe123 dbname=test_db port=5432 sslmode=disable"
